envoyfilter-teaching/envoyfilter/httpconnectionmanager/ef-scoped_routes-scoped_route_configurations_list.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpconnectionmanager
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
              name: envoy.filters.network.http_connection_manager
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                scoped_routes:
                  name: test
                  scope_key_builder:
                    fragments:
                    - header_value_extractor:
                        name: X-Header
                        element_separator: ";"
                        index: 0
                        element:
                          separator: "="
                          key: test
                  scoped_route_configurations_list:
                    scoped_route_configurations:
                    - on_demand: true
                      name: test
                      route_configuration:
                          name: test
                          virtual_hosts:
                          - name: test
                            domains:
                            - "*"
                            routes:
                            - name: testroute
                              match: 
                                prefix: /
                              direct_response:
                                status: 200
                                body: 
                                  inline_string: "scoped_route_configurations"
                      key:
                        fragments:
                        - string_key: test
